airflow/logs/dag_id=dynamic_metadata_pipeline/run_id=manual__2026-06-03T125711.809031+0000/task_id=run_pipeline_3/attempt=2.log
[2026-06-03T13:02:37.427+0000] {local_task_job_runner.py:120} INFO - ::group::Pre task execution logs
[2026-06-03T13:02:37.457+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: dynamic_metadata_pipeline.run_pipeline_3 manual__2026-06-03T12:57:11.809031+00:00 [queued]>
[2026-06-03T13:02:37.467+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: dynamic_metadata_pipeline.run_pipeline_3 manual__2026-06-03T12:57:11.809031+00:00 [queued]>
[2026-06-03T13:02:37.468+0000] {taskinstance.py:2306} INFO - Starting attempt 2 of 2
[2026-06-03T13:02:37.484+0000] {taskinstance.py:2330} INFO - Executing <Task(BashOperator): run_pipeline_3> on 2026-06-03 12:57:11.809031+00:00
[2026-06-03T13:02:37.491+0000] {standard_task_runner.py:90} INFO - Running: ['***', 'tasks', 'run', 'dynamic_metadata_pipeline', 'run_pipeline_3', 'manual__2026-06-03T12:57:11.809031+00:00', '--job-id', '143', '--raw', '--subdir', 'DAGS_FOLDER/dynamic_pipeline_dag.py', '--cfg-path', '/tmp/tmpupixmz_j']
[2026-06-03T13:02:37.494+0000] {standard_task_runner.py:91} INFO - Job 143: Subtask run_pipeline_3
[2026-06-03T13:02:37.494+0000] {logging_mixin.py:188} WARNING - /home/***/.local/lib/python3.12/site-packages/***/task/task_runner/standard_task_runner.py:61 DeprecationWarning: This process (pid=2272) is multi-threaded, use of fork() may lead to deadlocks in the child.
[2026-06-03T13:02:37.495+0000] {standard_task_runner.py:63} INFO - Started process 2273 to run task
[2026-06-03T13:02:37.540+0000] {task_command.py:426} INFO - Running <TaskInstance: dynamic_metadata_pipeline.run_pipeline_3 manual__2026-06-03T12:57:11.809031+00:00 [running]> on host c3bf940c8326
[2026-06-03T13:02:37.618+0000] {taskinstance.py:2648} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='subashri' AIRFLOW_CTX_DAG_ID='dynamic_metadata_pipeline' AIRFLOW_CTX_TASK_ID='run_pipeline_3' AIRFLOW_CTX_EXECUTION_DATE='2026-06-03T12:57:11.809031+00:00' AIRFLOW_CTX_TRY_NUMBER='2' AIRFLOW_CTX_DAG_RUN_ID='manual__2026-06-03T12:57:11.809031+00:00'
[2026-06-03T13:02:37.619+0000] {taskinstance.py:430} INFO - ::endgroup::
[2026-06-03T13:02:37.635+0000] {subprocess.py:63} INFO - Tmp dir root location: /tmp
[2026-06-03T13:02:37.637+0000] {subprocess.py:75} INFO - Running command: ['/usr/bin/bash', '-c', 'cd /opt/***/src && python main.py 3']
[2026-06-03T13:02:37.647+0000] {subprocess.py:86} INFO - Output:
[2026-06-03T13:02:53.704+0000] {subprocess.py:93} INFO - 
[2026-06-03T13:02:53.706+0000] {subprocess.py:93} INFO - ===================================
[2026-06-03T13:02:53.707+0000] {subprocess.py:93} INFO - DATABASE CONNECTION CONFIG
[2026-06-03T13:02:53.708+0000] {subprocess.py:93} INFO - ===================================
[2026-06-03T13:02:53.709+0000] {subprocess.py:93} INFO - DB TYPE   : postgres
[2026-06-03T13:02:53.709+0000] {subprocess.py:93} INFO - HOST      : 3.107.8.33
[2026-06-03T13:02:53.710+0000] {subprocess.py:93} INFO - PORT      : 5432
[2026-06-03T13:02:53.711+0000] {subprocess.py:93} INFO - DATABASE  : metadata_db
[2026-06-03T13:02:53.711+0000] {subprocess.py:93} INFO - USERNAME  : teamuser
[2026-06-03T13:02:53.712+0000] {subprocess.py:93} INFO - ===================================
[2026-06-03T13:02:53.712+0000] {subprocess.py:93} INFO - 
[2026-06-03T13:02:53.713+0000] {subprocess.py:93} INFO - Connected to POSTGRES successfully.
[2026-06-03T13:02:53.713+0000] {subprocess.py:93} INFO - 
[2026-06-03T13:02:53.714+0000] {subprocess.py:93} INFO - Running pipeline: postgres_to_postgres_pipeline (db_to_db)
[2026-06-03T13:02:53.714+0000] {subprocess.py:93} INFO - 
[2026-06-03T13:02:53.715+0000] {subprocess.py:93} INFO - ===================================
[2026-06-03T13:02:53.715+0000] {subprocess.py:93} INFO - DATABASE CONNECTION CONFIG
[2026-06-03T13:02:53.716+0000] {subprocess.py:93} INFO - ===================================
[2026-06-03T13:02:53.716+0000] {subprocess.py:93} INFO - DB TYPE   : postgres
[2026-06-03T13:02:53.717+0000] {subprocess.py:93} INFO - HOST      : 3.107.8.33
[2026-06-03T13:02:53.717+0000] {subprocess.py:93} INFO - PORT      : 5432
[2026-06-03T13:02:53.717+0000] {subprocess.py:93} INFO - DATABASE  : udifdb
[2026-06-03T13:02:53.718+0000] {subprocess.py:93} INFO - USERNAME  : teamuser
[2026-06-03T13:02:53.718+0000] {subprocess.py:93} INFO - ===================================
[2026-06-03T13:02:53.719+0000] {subprocess.py:93} INFO - 
[2026-06-03T13:02:53.719+0000] {subprocess.py:93} INFO - Connected to POSTGRES successfully.
[2026-06-03T13:02:53.720+0000] {subprocess.py:93} INFO - Completed: 4653 rows processed
[2026-06-03T13:02:53.720+0000] {subprocess.py:93} INFO - Traceback (most recent call last):
[2026-06-03T13:02:53.721+0000] {subprocess.py:93} INFO -   File "/opt/***/src/main.py", line 72, in main
[2026-06-03T13:02:53.721+0000] {subprocess.py:93} INFO -     log_audit(
[2026-06-03T13:02:53.721+0000] {subprocess.py:93} INFO -   File "/opt/***/src/audit_logger.py", line 55, in log_audit
[2026-06-03T13:02:53.724+0000] {subprocess.py:93} INFO -     cur.execute(
[2026-06-03T13:02:53.725+0000] {subprocess.py:93} INFO - psycopg2.errors.SyntaxError: INSERT has more target columns than expressions
[2026-06-03T13:02:53.725+0000] {subprocess.py:93} INFO - LINE 19:             error_message
[2026-06-03T13:02:53.725+0000] {subprocess.py:93} INFO -                      ^
[2026-06-03T13:02:53.726+0000] {subprocess.py:93} INFO - 
[2026-06-03T13:02:53.726+0000] {subprocess.py:93} INFO - 
[2026-06-03T13:02:53.727+0000] {subprocess.py:93} INFO - During handling of the above exception, another exception occurred:
[2026-06-03T13:02:53.727+0000] {subprocess.py:93} INFO - 
[2026-06-03T13:02:53.727+0000] {subprocess.py:93} INFO - Traceback (most recent call last):
[2026-06-03T13:02:53.728+0000] {subprocess.py:93} INFO -   File "/opt/***/src/main.py", line 111, in <module>
[2026-06-03T13:02:53.728+0000] {subprocess.py:93} INFO -     main()
[2026-06-03T13:02:53.728+0000] {subprocess.py:93} INFO -   File "/opt/***/src/main.py", line 95, in main
[2026-06-03T13:02:53.729+0000] {subprocess.py:93} INFO -     log_audit(
[2026-06-03T13:02:53.729+0000] {subprocess.py:93} INFO -   File "/opt/***/src/audit_logger.py", line 55, in log_audit
[2026-06-03T13:02:53.729+0000] {subprocess.py:93} INFO -     cur.execute(
[2026-06-03T13:02:53.730+0000] {subprocess.py:93} INFO - psycopg2.errors.SyntaxError: INSERT has more target columns than expressions
[2026-06-03T13:02:53.731+0000] {subprocess.py:93} INFO - LINE 19:             error_message
[2026-06-03T13:02:53.731+0000] {subprocess.py:93} INFO -                      ^
[2026-06-03T13:02:53.731+0000] {subprocess.py:93} INFO - 
[2026-06-03T13:02:53.876+0000] {subprocess.py:97} INFO - Command exited with return code 1
[2026-06-03T13:02:53.877+0000] {taskinstance.py:441} INFO - ::group::Post task execution logs
[2026-06-03T13:02:53.887+0000] {taskinstance.py:2905} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 465, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 432, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 400, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/operators/bash.py", line 243, in execute
    raise AirflowException(
airflow.exceptions.AirflowException: Bash command failed. The command returned a non-zero exit code 1.
[2026-06-03T13:02:53.891+0000] {taskinstance.py:1206} INFO - Marking task as FAILED. dag_id=dynamic_metadata_pipeline, task_id=run_pipeline_3, run_id=manual__2026-06-03T12:57:11.809031+00:00, execution_date=20260603T125711, start_date=20260603T130237, end_date=20260603T130253
[2026-06-03T13:02:53.905+0000] {standard_task_runner.py:110} ERROR - Failed to execute job 143 for task run_pipeline_3 (Bash command failed. The command returned a non-zero exit code 1.; 2273)
[2026-06-03T13:02:53.924+0000] {local_task_job_runner.py:240} INFO - Task exited with return code 1
[2026-06-03T13:02:53.941+0000] {taskinstance.py:3498} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2026-06-03T13:02:53.945+0000] {local_task_job_runner.py:222} INFO - ::endgroup::
